discord bot upgrade: edit working